# tf-bootstrap

./: README.md  pyproject.toml
tests/: test_tf_bootstrap.py
tf_bootstrap/: cli.py  create.py  destroy.py  utils.py
