[tool.poetry]
name = "tf-bootstrap"
version = "0.1.0"
description = ""
authors = ["Robert Bell <rmbbell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
